Fixed weird spacing issue

--- a/frontend/src/componments/DeveloperSection.css
+++ b/frontend/src/componments/DeveloperSection.css
@@ -1,7 +1,6 @@
 .developer-section-container {
     left: 0px;
     width: 100vw;
-    position: absolute;
     bottom: 0px;
 }
 
